Introduce pluggable tenant resolver
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>